# cmake_cuda_example

./: README.md  build.sh
basic/: CMakeLists.txt
basic/src/: test.cu
